# rover_full

ci/: lint.py  (+1 more)
ros_ws/src/applications/roast_actions/: CMakeLists.txt  package.xml
ros_ws/src/applications/roast_actions/launch/: action_servers.launch.py
ros_ws/src/applications/roast_actions/src/: goto_home.cc  move_forward.cc  send_sms.cc  speaker_announcement.cc
ros_ws/src/applications/roast_behavior_tree/: CMakeLists.txt  README.md  package.xml
ros_ws/src/applications/roast_behavior_tree/behavior_trees/: demo_v0.xml  demo_v1.xml  main.xml
ros_ws/src/applications/roast_behavior_tree/configs/: bt_engine.yaml
ros_ws/src/applications/roast_behavior_tree/debug_nodes/: activate_led_service_debug.cc  patrol_action_debug.cc  send_command_center_message_debug.cc  send_sms_message_debug.cc  speaker_announcement_debug.cc  threat_mitigation_service_debug.cc  track_threat_debug.cc
ros_ws/src/applications/roast_behavior_tree/groot/: bt_nodes.xml  nav2_bt_nodes.xml  palette.xml
ros_ws/src/applications/roast_behavior_tree/launch/: behavior_tree_engine.launch.py  debug_plugins.launch.py
ros_ws/src/applications/roast_behavior_tree/src/: bt_engine.cc
ros_ws/src/applications/roast_patrolling/: CMakeLists.txt  README.md  package.xml
ros_ws/src/applications/roast_patrolling/behavior_trees/: patroling_with_pause.xml  patroling_without_pause.xml
ros_ws/src/applications/roast_patrolling/launch/: patrolling.launch.py
ros_ws/src/applications/roast_patrolling/src/: patrol.cc
ros_ws/src/applications/roast_people_detection/: CMakeLists.txt  package.xml
ros_ws/src/applications/roast_people_detection/behavior_trees/: move_to_group.xml
ros_ws/src/applications/roast_people_detection/launch/: people_detection.launch.py
ros_ws/src/applications/roast_people_detection/python/: dummy_people_info_publisher.py
ros_ws/src/applications/roast_people_detection/src/: move_to_people.cc
ros_ws/src/applications/roast_services/: CMakeLists.txt  package.xml
ros_ws/src/applications/roast_services/launch/: services.launch.py
ros_ws/src/applications/roast_services/src/: capture_camera_service.cc  delete_logs.cc  display_mode_selector.cc  get_robot_pose.cc  led_mode_selector.cc  set_alert_mode.cc
ros_ws/src/applications/roast_threat_tracking/: CMakeLists.txt  package.xml
ros_ws/src/applications/roast_threat_tracking/behavior_trees/: threat_tracker.xml
ros_ws/src/applications/roast_threat_tracking/launch/: threat_tracking.launch.py
ros_ws/src/applications/roast_threat_tracking/src/: threat_tracking.cc
ros_ws/src/command_center/roast_diagnostics/: CMakeLists.txt  package.xml
ros_ws/src/command_center/roast_diagnostics/launch/: diagnostics.launch.py
ros_ws/src/libs/roast_interfaces/: CMakeLists.txt  README.md  package.xml
ros_ws/src/libs/roast_interfaces/action/: ConnectToChargingStation.action  GoToHome.action  GoToPose.action  MoveForward.action  MoveToPeople.action  PatrolAction.action  SendCommandCenterMessage.action  SendSmsMessage.action  SpeakerAnnouncement.action  TrackTarget.action
ros_ws/src/libs/roast_interfaces/msg/: Diagnostics.msg  DisplayMode.msg  HandGesture.msg  LedMode.msg  ObjectTracking.msg  PeopleGroup.msg  Robot.msg  ThreatGroupInfo.msg  ThreatInfo.msg  Vision.msg
ros_ws/src/libs/roast_interfaces/srv/: AlertMode.srv  CaptureCamera.srv  DeleteLogs.srv  DetectAruco.srv  Display.srv  DisplayPhoto.srv  Fan.srv  GetRobotPose.srv  JetsonClocks.srv  LedModeSelector.srv  NVPModel.srv  SprayModule.srv  WaitForHandGesture.srv
ros_ws/src/libs/roast_interfaces/test/: test_interfaces.py
ros_ws/src/libs/roast_lifecycle_manager/: CMakeLists.txt  package.xml
ros_ws/src/libs/roast_lifecycle_manager/src/: lifecycle_manager.cc  lifecycle_manager_client.cc  main.cc
ros_ws/src/libs/roast_logging/: CMakeLists.txt  package.xml
ros_ws/src/libs/roast_logging/src/: logger_config_component.cc  logger_usage_component.cc  main.cc
ros_ws/src/navigation/roast_navigation/: package.xml  setup.cfg  setup.py
ros_ws/src/navigation/roast_navigation/behavior_trees/: navigate_w_replanning_and_recovery.xml  navigate_with_consistent_replanning.xml
ros_ws/src/navigation/roast_navigation/config/: ekf.yaml  exploration.yaml  localization.yaml  nav2_filters.yaml  navigation.yaml  slam_async.yaml
ros_ws/src/navigation/roast_navigation/launch/: exploration.launch.py  lifelong.launch.py  navigation.launch.py  robot_localization.launch.py
ros_ws/src/navigation/roast_navigation/maps/: cyber_towers.pgm  cyber_towers.yaml  recent_map.pgm  recent_map.yaml  trial_env.yaml
ros_ws/src/navigation/roast_navigation/roast_navigation/: initial_pose_handler.py  odometry_pose_handler.py
ros_ws/src/navigation/roast_slam/: CMakeLists.txt  package.xml
ros_ws/src/navigation/roast_slam/launch/: rtabmap.launch.py  vision_mapping.launch.py
ros_ws/src/navigation/roast_slam/rviz/: mapping.rviz
ros_ws/src/navigation/roast_slam/src/: pcl_to_map.cc
ros_ws/src/perception/roast_pcl/: CMakeLists.txt  package.xml
ros_ws/src/perception/roast_pcl/configs/: filter_params.yaml
ros_ws/src/perception/roast_pcl/launch/: pcl.launch.py  pcl_filters.launch.py  pointcloud_to_laserscan.launch.py  velodyne.launch.py
ros_ws/src/roast_bringup/: CMakeLists.txt  README.md  package.xml
ros_ws/src/roast_bringup/foxglove/: foxglove.json
ros_ws/src/roast_bringup/launch/: record_data.launch.py  robot_bringup.launch.py  rviz.launch.py  sim_bringup.launch.py  startup.launch.py
ros_ws/src/roast_bringup/rviz/: view_rviz.rviz
ros_ws/src/roast_bringup/scripts/: bootup_service.sh  velodyne_auto_ip.sh
ros_ws/src/roast_ros/: CMakeLists.txt  package.xml
ros_ws/src/utils/roast_utils/: README.md  package.xml  setup.cfg  setup.py
ros_ws/src/utils/roast_utils/behavior_trees/: navigate_without_recovery.xml
ros_ws/src/utils/roast_utils/config/: patrol_points.json
ros_ws/src/utils/roast_utils/roast_utils/: acceleration_estimator.py  lifecycle_activator.py  motor_drive_calibrator.py  odometry_tester.py  patrol_points_builder.py  pid_tuner.py  rosbag2csv.py  threat_pose_publisher.py  threat_tracking_with_patrol.py
(+239 files in other folders)
