<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roast_bringup</name>
  <version>0.0.0</version>
  <description>Bringup package for the robot</description>
  <maintainer email="franklinselva10@gmail.com">Selvakumar.H-S</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>roast_behavior_tree</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>nav2_rviz_plugins</depend>
  <depend>mcap_vendor</depend>
  <depend>rosbag2_storage</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
