<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roast_ros</name>
  <version>0.0.0</version>
  <description>ROS Metapackage for roast robot</description>
  <maintainer email="franklinselva10@gmail.com">Selvakumar.H-S</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>roast_bringup</depend>
  <depend>roast_patrolling</depend>
  <depend>roast_threat_tracking</depend>
  <depend>roast_utils</depend>
  <depend>roast_logging</depend>
  <depend>roast_lifecycle_manager</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
