<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roast_navigation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="franklinselva10@gmail.com">Selvakumar</maintainer>
  <license>TODO: License declaration</license>

  <depend>gazebo_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>roast_interfaces</depend>
  <depend>roast_exploration</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_common</depend>
  <depend>nav2_controller</depend>
  <depend>navigation2</depend>
  <depend>nav2_bt_navigator</depend>
  <depend>nav2_waypoint_follower</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_amcl</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_rotation_shim_controller</depend>
  <depend>nav2_navfn_planner</depend>
  <depend>nav2_regulated_pure_pursuit_controller</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>robot_localization</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
