<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roast_slam</name>
  <version>0.0.0</version>
  <description>This package holds the development related to vision based mapping algorithms and configurations</description>
  <maintainer email="selva@adso.com">Selvakumar.H-S</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>pcl_ros</depend>
  <depend>message_filters</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>
  <depend>octomap</depend>
  <depend>octomap_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
