<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roast_pcl</name>
  <version>0.0.0</version>
  <description>Perception related configurations for pointclouds and 3d imaging</description>
  <maintainer email="selva@adso.com">Selvakumar.H-S</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>libpcl-filters</depend>
  <depend>pcl_conversions</depend>
  <depend>sensor_msgs</depend>
  <depend>rclcpp</depend>
  <depend>eigen</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
